--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name    = "viewport" content                     = "width=device-width, initial-scale=1">
 	<!-- viewport para definir a largura da pagina de acordo o diaposito-->
 	<title>Parque de estacionamento</title> <!--titulo da pagina-->
-    <link rel = "stylesheet" type = "text/css" href = "estilos.css">
+    <link rel = "stylesheet" type = "text/css" href = "estilos1.css">
 	<!-- rel diz qual a relacao com de ficheiros, no caso uma folha de estilos
 		type atribui o estilo de ficheiro vinculado  
 		href especifica a localizacao do ficheiro css associado ao atual documento index.html  -->	
 
 </head>
-<body class = fundo> <!--As classes são atribuidas para que no ficheiro de css, se consiga personalizar o que está dentro neste caso da body-->
+<body class = fundo>
 <h1   class = titulo>PROJETO - ESTACIOMANETO INTELIGENTE</h1> <!--a class do titulo vai formatar o titulo com indicacoes na pagina css-->
 <h2   class = "subtitulo">ATUADORES</h2>
 	
@@ -45,6 +45,7 @@
 		<li>
 			<a href="camera.php">SMARTCAMERA (ON/OFF)</a>
 		</li>
+		<br>
 		<li>
 			<a href="incendio.php">SENSOR INCENDIO (ON/OFF)</a>
 		</li>
